force-app/main/default/objects/Client__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>35</length>
    <type>Text</type>
</CustomField>