force-app/main/default/objects/Client__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <defaultValue>null</defaultValue>
    <externalId>true</externalId>
    <label>Client Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>