force-app/main/default/objects/Client__c/fields/ClientNumber__c.field-meta.xml
<CustomField>
    <fullName>ClientNumber__c</fullName>
    <label>Client Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>