force-app/main/default/objects/Client__c/fields/Deleteable__c.field-meta.xml
<CustomField>
    <fullName>Deleteable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, allows deletion by automated callout services.</description>
    <inlineHelpText>Allow deletion by scheduled callout services?</inlineHelpText>
    <label>Deleteable</label>
    <type>Checkbox</type>
</CustomField>