force-app/main/default/objects/Client__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>